Cleanup of terminal.*, and added cmake.* to parse CMakeLists.txt. Also fixed compile, and compile and run. Remember to remove ~/.juci/config/config.json to get this version to work.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,7 +79,9 @@ if(${validation})
     tooltips.h
     tooltips.cc
     singletons.h
-    singletons.cc)
+    singletons.cc
+    cmake.h
+    cmake.cc)
 
   add_library(${module} SHARED
     api
