--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libclangmm"]
 	path = libclangmm
-	url = https://github.com/eidheim/libclangmm.git
+	url = https://github.com/cppit/libclangmm/tree/v0.9.3
