Yet another try on libclangmm version linking.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "libclangmm"]
 	path = libclangmm
-	url = https://github.com/cppit/libclangmm
+	url = https://github.com/cppit/libclangmm.git
+	branch = v0.9.3
