Added .desktop file. Ubuntu menues should work decently now, although key-bindings are not updated from within juci (Ubuntu bug).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,8 @@ set(project_name juci)
 project (${project_name})
 
 add_subdirectory("src")
+
+find_program(XDG_DESKTOP_MENU_EXECUTABLE xdg-desktop-menu)
+if(XDG_DESKTOP_MENU_EXECUTABLE)
+  install(CODE "execute_process(COMMAND ${XDG_DESKTOP_MENU_EXECUTABLE} install --novendor share/juci.desktop)")
+endif()
