Fixed Exec in juci.desktop.

--- a/share/juci.desktop
+++ b/share/juci.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=juCi++
 Comment=A lightweight IDE
-Exec=juci %U
+Exec=juci %F
 Terminal=false
 Type=Application
 StartupNotify=true
