--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory("src")
 
 find_program(XDG_DESKTOP_MENU_EXECUTABLE xdg-desktop-menu)
 if(XDG_DESKTOP_MENU_EXECUTABLE)
+  install(DIRECTORY DESTINATION "/usr/share/desktop-directories")
   install(CODE "execute_process(COMMAND ${XDG_DESKTOP_MENU_EXECUTABLE} install --novendor share/juci.desktop)")
 endif()
