--- a/share/juci.desktop
+++ b/share/juci.desktop
@@ -1,9 +1,10 @@
 [Desktop Entry]
+Version=1.0
 Name=juCi++
 Comment=A lightweight IDE
-Exec=juci %F
+Exec=/usr/local/bin/juci %F
 Terminal=false
 Type=Application
 StartupNotify=true
-MimeType=text/plain;
+MimeType=text/plain;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-c;text/x-c++;
 Categories=Utility;Development;TextEditor;
