--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ add_subdirectory("src")
 
 find_program(XDG_DESKTOP_MENU_EXECUTABLE xdg-desktop-menu)
 if(XDG_DESKTOP_MENU_EXECUTABLE)
-  install(DIRECTORY DESTINATION "/usr/share/desktop-directories")
+  file(MAKE_DIRECTORY "/usr/share/desktop-directories") #Workaround for https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=730621
   install(CODE "execute_process(COMMAND ${XDG_DESKTOP_MENU_EXECUTABLE} install --novendor share/juci.desktop)")
 endif()
