--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,8 +28,18 @@ endif()
 INCLUDE(FindPkgConfig)
 
 find_package(LibClang REQUIRED)
-string(REPLACE libclang liblldb LLDB_LIBRARIES "${LIBCLANG_LIBRARIES}")
-
+string(REPLACE libclang liblldb LIBLLDB_LIBRARIES "${LIBCLANG_LIBRARIES}")
+if(EXISTS "${LIBLLDB_LIBRARIES}")
+  set(LIBLLDB_FOUND TRUE)
+elseif(EXISTS "${LIBLLDB_LIBRARIES}.1")
+  set(LIBLLDB_LIBRARIES "${LIBLLDB_LIBRARIES}.1")
+  set(LIBLLDB_FOUND TRUE)
+endif()
+if(LIBLLDB_FOUND)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DJUCI_ENABLE_DEBUG")
+else()
+  set(LIBLLDB_LIBRARIES "")
+endif()
 #find_package(PythonLibs 2.7)
 
 #find_package(Boost 1.55 COMPONENTS python thread log system filesystem REQUIRED)
@@ -93,6 +103,10 @@ set(source_files juci.h
     
     ../tiny-process-library/process.cpp)
 
+if(LIBLLDB_FOUND)
+  list(APPEND source_files debug.h debug.cc)
+endif()
+
 if(MSYS)
   list(APPEND source_files dialogs_unix.cc) #dialogs_win.cc does not work any more because of missing SHCreateItemFromParsingName
   list(APPEND source_files ../tiny-process-library/process_win.cpp)
@@ -139,7 +153,7 @@ target_link_libraries(${project_name}
   ${GTKSVMM_LIBRARIES}
   ${Boost_LIBRARIES}
   ${ASPELL_LIBRARIES}
-  ${LLDB_LIBRARIES}
+  ${LIBLLDB_LIBRARIES}
   #${PYTHON_LIBRARIES}
 )
 
