Slight change of warning message when lldb is not found

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,7 @@ if(LIBLLDB_FOUND)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DJUCI_ENABLE_DEBUG")
 else()
   set(LIBLLDB_LIBRARIES "")
-  message("liblldb not found. Compiling juCi++ without debugging support")
+  message("liblldb not found. Building juCi++ without debugging support")
 endif()
 #find_package(PythonLibs 2.7)
 
