WIP: project cleanup, added project classes so that the hard dependency towards clang is removed in Window. In this way, one can add run commands for other project and file types.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -84,6 +84,8 @@ set(source_files juci.h
     cmake.h
     cmake.cc
     dialogs.cc
+    project.h
+    project.cc
     
     ../libclangmm/src/CodeCompleteResults.cc
     ../libclangmm/src/CompilationDatabase.cc
