Major project cleanup. Fixes #97 making it possible to support other build tools

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -86,6 +86,8 @@ set(source_files juci.h
     dialogs.cc
     project.h
     project.cc
+    project_build.h
+    project_build.cc
     dispatcher.h
     dispatcher.cc
     
