--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "libclangmm"]
-	path = libclangmm
-	url = https://github.com/cppit/libclangmm.git
-	branch = v0.9.4
 [submodule "tiny-process-library"]
 	path = tiny-process-library
 	url = https://github.com/eidheim/tiny-process-library
 	branch = v1.0.3
+[submodule "libclangmm"]
+	path = libclangmm
+	url = https://github.com/cppit/libclangmm.git
+	branch = master
