--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = tiny-process-library
 	url = https://github.com/eidheim/tiny-process-library
 	branch = v1.0.3
+[submodule "libclangmm"]
+	path = libclangmm
+	url = https://github.com/cppit/libclangmm
+	branch = v0.9.5
