--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "libclangmm"]
 	path = libclangmm
 	url = https://github.com/cppit/libclangmm
+	branch = v0.9.6
 [submodule "tiny-process-library"]
 	path = tiny-process-library
 	url = https://github.com/eidheim/tiny-process-library
+	branch = v1.0.4
