Removed boost-log and boost-thread dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ if(MSYS)
 endif()
 
 find_package(LibClang REQUIRED)
-find_package(Boost 1.54 COMPONENTS thread log regex system filesystem REQUIRED)
+find_package(Boost 1.54 COMPONENTS regex system filesystem REQUIRED)
 find_package(ASPELL REQUIRED)
 set(LIBCLANGMM_INCLUDE_DIR ../libclangmm/src)
 set(TINY_PROCESS_INCLUDE_DIR ../tiny-process-library)
@@ -86,7 +86,6 @@ set(project_files
     filesystem.h
     juci.cc
     juci.h
-    logging.h
     menu.cc
     menu.h
     notebook.cc
