added target doc; added demo documentation; added automatic plantuml detection (Download and install http://de.plantuml.com/).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -141,3 +141,21 @@ target_link_libraries(${project_name} ${global_libraries})
 install(TARGETS ${project_name}
   RUNTIME DESTINATION bin
 )
+
+find_package(Plantuml)
+if(PLANTUML_FOUND)
+#message("plantuml found PLANTUML_JARFILE=${PLANTUML_JARFILE}")
+else(Plantuml_FOUND)
+message("plantuml not found. No UML diagrams are generated. You may define the environment variable PLANTUML_PATH...")
+endif(PLANTUML_FOUND)
+
+# add a target to generate API documentation with Doxygen
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+add_custom_target(doc
+${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
+WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+COMMENT "Generating API documentation with Doxygen to ${CMAKE_CURRENT_BINARY_DIR}" VERBATIM
+)
+endif(DOXYGEN_FOUND)
