Boilerplate for OSX, use images instead of dockerfiles, upgrades travis host, easy to test locally

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,19 @@
 sudo: required
-language: cpp
 
 env:
   - distribution: ubuntu
-    version: 16.04
-    init: /sbin/init
-    run_opts: ""
   - distribution: fedora
-    version: 23
-    init: /sbin/init
-    run_opts: ""
+  - distribution: arch
+  - distribution: debian-testing
+  - distribution: debian
 
 services:
   - docker
   
 before_install:
-  - sudo docker pull ${distribution}:${version}
-  - sudo docker build --rm=true --file=ci/${distribution}-${version}.docker --tag=${distribution}-${version}:jucipp ci
+  - ./ci/update_travis.sh
 
 script:
-  - container_id=$(mktemp)
-  - sudo docker run --detach --volume="${PWD}":/home/:rw ${run_opts} ${distribution}-${version}:jucipp "${init}" > "${container_id}"
-  
-  - sudo docker exec "$(cat ${container_id})" /home/ci/${distribution}-${version}.build
-  
-  - sudo docker stop "$(cat ${container_id})"
+  - CXX=clang++ CC=clang ./ci/compile_container.sh
+  - ./ci/compile_container.sh
+  - ./ci/static_analysis.sh
