Disable tests when compiling with clang++ on Tavis CI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux|FreeBSD|OpenBSD|NetBSD")
         DESTINATION "${CMAKE_INSTALL_PREFIX}/share/applications")
 endif()
 
-if(ENABLE_TESTING)
-  enable_testing()
-  add_subdirectory(tests)
+if(NOT (("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang") AND (NOT $ENV{distribution} STREQUAL "")))
+  if(ENABLE_TESTING)
+    enable_testing()
+    add_subdirectory(tests)
+  endif()
 endif()
