--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,3 @@
-add_definitions(-DBOOST_LOG_DYN_LINK)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -pthread -Wall -Wextra -Wno-unused-parameter -Wno-reorder")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules/")
-
-if(APPLE)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -undefined dynamic_lookup")
-  link_directories(/usr/local/lib /usr/local/opt/gettext/lib)
-  include_directories(/usr/local/opt/gettext/include)
-  set(CMAKE_MACOSX_RPATH 1)
-  set(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:/usr/local/lib/pkgconfig:/opt/X11/lib/pkgconfig")
-endif()
-
 if(UNIX) #Checking if compiling on Ubuntu that for instance has a buggy menu system
   find_program(LSB_RELEASE_BIN lsb_release)
   if(LSB_RELEASE_BIN)
@@ -25,12 +13,6 @@ if(MSYS)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMSYS_PROCESS_USE_SH")
 endif()
 
-find_package(LibClang REQUIRED)
-find_package(Boost 1.54 COMPONENTS regex system filesystem REQUIRED)
-find_package(ASPELL REQUIRED)
-set(LIBCLANGMM_INCLUDE_DIR ../libclangmm/src)
-set(TINY_PROCESS_INCLUDE_DIR ../tiny-process-library)
-
 string(REPLACE libclang liblldb LIBLLDB_LIBRARIES "${LIBCLANG_LIBRARIES}")
 if(EXISTS "${LIBLLDB_LIBRARIES}")
   set(LIBLLDB_FOUND TRUE)
@@ -45,18 +27,14 @@ else()
   message("liblldb not found. Building juCi++ without debugging support")
 endif()
 
-include(FindPkgConfig)
-pkg_check_modules(GTKMM gtkmm-3.0 REQUIRED)
-pkg_check_modules(GTKSVMM gtksourceviewmm-3.0 REQUIRED)
-
 set(global_includes
    ${Boost_INCLUDE_DIRS}
    ${GTKMM_INCLUDE_DIRS}
    ${GTKSVMM_INCLUDE_DIRS}
    ${LIBCLANG_INCLUDE_DIRS}
-   ${LIBCLANGMM_INCLUDE_DIR}
    ${ASPELL_INCLUDE_DIR}
-   ${TINY_PROCESS_INCLUDE_DIR}
+   ../libclangmm/src
+   ../tiny-process-library
 )
 
 set(global_libraries
