--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required (VERSION 2.8.4)
+cmake_minimum_required (VERSION 2.8.8)
 
 set(project_name juci)
 project (${project_name})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall -Wextra -Wno-unused-parameter -Wno-reorder")
-if(NOT (CMAKE_BUILD_TYPE STREQUAL "Debug"))
+if(CMAKE_BUILD_TYPE STREQUAL "")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 endif()
 
@@ -18,6 +18,22 @@ endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake_modules/")
 find_package(LibClang REQUIRED)
+
+#Find liblldb with the same version as the version of libclang found
+string(REPLACE libclang liblldb LIBLLDB_LIBRARIES "${LIBCLANG_LIBRARIES}")
+if(EXISTS "${LIBLLDB_LIBRARIES}")
+  set(LIBLLDB_FOUND TRUE)
+elseif(EXISTS "${LIBLLDB_LIBRARIES}.1")
+  set(LIBLLDB_LIBRARIES "${LIBLLDB_LIBRARIES}.1")
+  set(LIBLLDB_FOUND TRUE)
+endif()
+if(LIBLLDB_FOUND)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DJUCI_ENABLE_DEBUG")
+else()
+  set(LIBLLDB_LIBRARIES "")
+  message("liblldb not found. Building juCi++ without debugging support")
+endif()
+
 find_package(Boost 1.54 COMPONENTS regex system filesystem REQUIRED)
 find_package(ASPELL REQUIRED)
 include(FindPkgConfig)
