Add process_test, and fixits test in source_view_test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ set(global_libraries
 set(project_files
     config.cc
     dialogs.cc
+    dialogs_unix.cc
     directories.cc
     entrybox.cc
     info.cc
@@ -47,8 +48,6 @@ set(project_files
     terminal.cc
     tooltips.cc
     window.cc
-
-    ../tiny-process-library/process.cpp
 )
 
 #Files used both in ../src and ../tests
@@ -74,6 +73,8 @@ set(project_shared_files
     ../libclangmm/src/Tokens.cc
     ../libclangmm/src/TranslationUnit.cc
     ../libclangmm/src/Utility.cc
+    
+    ../tiny-process-library/process.cpp
 )
 
 if(LIBLLDB_FOUND)
@@ -81,9 +82,9 @@ if(LIBLLDB_FOUND)
 endif()
 
 if(MSYS)
-  list(APPEND project_files dialogs_unix.cc ../tiny-process-library/process_win.cpp)
+  list(APPEND project_shared_files ../tiny-process-library/process_win.cpp)
 else()
-  list(APPEND project_files dialogs_unix.cc ../tiny-process-library/process_unix.cpp)
+  list(APPEND project_shared_files ../tiny-process-library/process_unix.cpp)
 endif()
 
 include_directories(${global_includes})
